fix: hide scrollbar for windows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,9 @@ body {
   text-align: left;
   font-size: 18px;
   font-weight: 400;
-  padding: 0 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: calc(17px + 1.5rem);
+  margin-right: -17px;
 }
 
 .phone__number {
@@ -225,6 +227,8 @@ body {
   overflow-x: auto;
   width: 100%;
   background-color: #fff;
+  padding-bottom: 17px;
+  margin-bottom: -17px;
 }
 
 .phone__menu {
